--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -73,7 +73,7 @@ button {
   padding: 1rem;
   background: #eeeeee;
   color: black;
-  transition: all.2s;
+  transition: all 2s;
 }
 
 button:hover {
